Adjusted follower img size to prevent text jump on image load

--- a/app/assets/css/components.css
+++ b/app/assets/css/components.css
@@ -154,11 +154,14 @@
 
 .FollowerResults__img {
   width: 80vw;
+  height: 80vw;
   border-radius: 3%;
   position: relative;
   max-width: 450px;
+  max-height: 450px;
 
   @media(min-width: 500px) {
+      height: 40vw;
       width: 40vw;
   }
 }
